@@ -1,4 +1,4 @@
-$Amigan: fakedbfs/doc/FILE_PLUGINS,v 1.5 2005/08/25 07:20:35 dcp1990 Exp $
+$Amigan: fakedbfs/doc/FILE_PLUGINS,v 1.6 2006/02/23 21:26:00 dcp1990 Exp $
 
 How to write file plugins
 	By Dan Ponte
@@ -10,13 +10,13 @@ employed. A file plugin must contain the following functions and globals:
 
 struct PluginInfo plugin_inf;
 
-int plugin_init(char **errmsg);
+int plugin_init(fdbfs_t *f, char **errmsg);
 
-int plugin_shutdown(char **errmsg);
+int plugin_shutdown(fdbfs_t *f, char **errmsg);
 
-int check_file(char *filename, char **errmsg);
+int check_file(fdbfs_t *f, char *filename, char **errmsg);
 
-fields_t* extract_from_file(char *filename, char **errmsg);
+fields_t* extract_from_file(fdbfs_t *f, char *filename, char **errmsg);
 ********************************************************************************
 struct PluginInfo plugin_inf;
 
@@ -53,7 +53,7 @@ struct PluginInfo {
 
 --
 
-int plugin_init(char **errmsg);
+int plugin_init(fdbfs_t *f, char **errmsg);
 
 This function is called when the plugin is first loaded. If an error occurs,
 return 0 and set *errmsg to a _dynamically-allocated_ string. Otherwise, return 1
@@ -61,7 +61,7 @@ and set *errmsg to NULL.
 
 --
 
-int plugin_shutdown(char **errmsg);
+int plugin_shutdown(fdbfs_t *f, char **errmsg);
 
 This is called right before the plugin is unloaded. If an error occurs,
 return 0 and set *errmsg to a _dynamically-allocated_ string. Otherwise, return 1
@@ -69,7 +69,7 @@ and set *errmsg to NULL.
 
 --
 
-int check_file(char *filename, char **errmsg);
+int check_file(fdbfs_t *f, char *filename, char **errmsg);
 
 This is called in order to check if the file named filename can be read/handled
 by this plugin. This is always called, even if a file matches something in
@@ -79,7 +79,7 @@ of these cases, set *errmsg to NULL. If an error occurs, return -1 and set
 
 --
 
-fields_t* extract_from_file(char *filename, char **errmsg);
+fields_t* extract_from_file(fdbfs_t *f, char *filename, char **errmsg);
 
 This function is called to extract metadata from the file named filename. Return
 a linked-list of dynamically-allocated fields (the fields_t structure).
@@ -110,5 +110,8 @@ error occurs, return NULL and set *errmsg to a _dynamically-allocated_ string
 describing the error. Otherwise, simply set *errmsg to NULL.
 
 ------
+
+Note that you should be *****extremely***** careful with the fdbfs_t you are passed! Some stuff
+may not be completely reentrant, and it could cause trouble.
 
 That should be all. Happy plugin writing!
