@@ -1,8 +1,12 @@
-$Amigan: fakedbfs/CHANGELOG,v 1.18 2006/01/30 22:00:26 dcp1990 Exp $
+$Amigan: fakedbfs/CHANGELOG,v 1.19 2006/02/23 21:26:00 dcp1990 Exp $
 
 Changelog
 
 2.0.0-RELEASE ("Doctor Wu")
+*Plugin API changed; now passed an fdbfs_t*
+*Added support for FLAC filename matching and vorbis tags to music plugin
+*Fixed bugs with extracting data from filenames for music plugin
+*Fixed path bugs with indexer
 *New logo. YEAH!!!!
 *THE GREAT RENAMING....most symbols start with fdbfs_ now, and stuff has been split up. Major changes.
 *doxygen API docs...finally!
